--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <li><a href="#">About</a></li>
         <li><a href="#">Service</a></li>
         <li><a href="#">Contanct</a></li>
+        <li><a href="#">Features</a></li>
       </ul>
     </nav>
   </body>
